take out BYOSED

--- a/src/Makefile
+++ b/src/Makefile
@@ -331,8 +331,8 @@ OBJ_GENMAG_SIM =	\
 	$(OBJ_GENMAG_FIT) \
 	$(OBJ)/genmag_NON1ASED.o \
 	$(OBJ)/genmag_NON1AGRID.o \
-	$(OBJ)/genmag_LCLIB.o	 \
-	$(OBJ)/genmag_BYOSED.o
+	$(OBJ)/genmag_LCLIB.o	
+#	$(OBJ)/genmag_BYOSED.o
 
 OBJ_SNTOOLS_SNANA	 = 	\
 	$(OBJ)/sntools.o 	\
