new COVSED intrinsic scatter model

--- a/src/Makefile
+++ b/src/Makefile
@@ -118,7 +118,9 @@
 #
 # May 3 2019: create blank subDirs (OBJ,LIB,BIN) that are not in Git.
 # Jun 19 2019: include psnid_BEST2.c
-# Juj 27 2019: compile to inoue_igm.c (to correct spectral flux for igm)
+# Jul 27 2019: compile to inoue_igm.c (to correct spectral flux for igm)
+# Oct 22 2019: compile with -O2 to speed sim with genSmear Cholesky stuff.
+#               (-O3 doesn't help)
 #
 # ---------------------------------------------------------------------
 
@@ -141,9 +143,10 @@ endif
 FFC  = gfortran
 CC   = cc
 
-   DBUGFLAGS = -O1
-#  DBUGFLAGS = -O1 -Wall
-#  DBUGFLAGS = -g -fbounds-check  # valgrind --leak-check=full 
+EXTRA_FLAGS = -O2   # -ftree-vectorize -ftree-vectorizer-verbose=2
+
+# EXTRA_FLAGS = -O2 -Wall
+# EXTRA_FLAGS = -g -fbounds-check  # valgrind --leak-check=full 
 
   PROFILEFLAG = 
 #  PROFILEFLAG = -pg
@@ -233,12 +236,12 @@ endif
 # --------------------------------------------
 # set compile flags.
 ifeq ($(BITNESS),i686)
-   SNFFLAGS  = -c -static -fno-automatic -fsecond-underscore $(DBUGFLAGS)
-   SNCFLAGS  = -c -static -m64 $(DBUGFLAGS)
+   SNFFLAGS  = -c -static -fno-automatic -fsecond-underscore $(EXTRA_FLAGS)
+   SNCFLAGS  = -c -static -m64 $(EXTRA_FLAGS)
    SNLDFLAGS = -m64 -lg2c -lpthread $(PROFILEFLAG)
 else
-   SNFFLAGS  = -c -static -fno-automatic -m64  -fsecond-underscore $(DBUGFLAGS)
-   SNCFLAGS  = -c -static -m64 $(DBUGFLAGS)
+   SNFFLAGS  = -c -static -fno-automatic -m64  -fsecond-underscore $(EXTRA_FLAGS)
+   SNCFLAGS  = -c -static -m64 $(EXTRA_FLAGS)
    SNLDFLAGS = -m64 -lpthread $(PROFILEFLAG)
 endif
 
@@ -750,7 +753,7 @@ $(OBJ)/sntools.o : $(SRC)/sntools.c $(SRC)/sntools.h $(SRC)/sndata.h
 
 $(OBJ)/sntools_genSmear.o : $(SRC)/sntools_genSmear.c $(SRC)/sntools_genSmear.h $(SRC)/sntools.h
 	(cd $(OBJ); \
-	$(CC) $(SNCFLAGS) $(IGSL) $(SRC)/sntools_genSmear.c )
+	$(CC) $(SNCFLAGS) $(ICFITSIO) $(IGSL) $(SRC)/sntools_genSmear.c )
 	ar r $(LIB)/libsnana.a  $(OBJ)/sntools_genSmear.o
 
 # -------------------------------------------------
@@ -942,8 +945,11 @@ $(OBJ)/genmag_LCLIB.o : $(SRC)/genmag_LCLIB.c  $(SRC)/sntools.h
 # -------------------------------------------------
 # Generic Lightcurve simulator 
 
-$(OBJ)/snlc_sim.o : $(SRC)/snlc_sim.c $(SRC)/sntools_gridgen.c  $(SRC)/sntools_fitsio.c $(SRC)/sntools_host.c $(SRC)/sntools_wronghost.c  $(SRC)/sntools_host.h \
-	$(SRC)/snlc_sim.h $(SRC)/SNcadenceFoM.c $(SRC)/sndata.h
+$(OBJ)/snlc_sim.o : $(SRC)/snlc_sim.c $(SRC)/sntools_gridgen.c \
+	 $(SRC)/sntools_fitsio.c $(SRC)/sntools_host.c \
+	$(SRC)/sntools_wronghost.c  $(SRC)/sntools_host.h \
+	$(SRC)/sntools_genSmear.c $(SRC)/SNcadenceFoM.c  \
+	$(SRC)/snlc_sim.h $(SRC)/sndata.h
 	(cd $(OBJ); $(CC) $(SNCFLAGS) $(IGSL) $(ICFITSIO) $(IPY) $(SRC)/snlc_sim.c )
 
 $(BIN)/snlc_sim.exe : $(OBJ_SIM)  $(LIB)/libsnana.a
@@ -1010,7 +1016,7 @@ $(BIN)/filtercal_sim.exe : \
 # SIMSED_fudge
 
 $(OBJ)/SIMSED_fudge.o : $(SRC)/SIMSED_fudge.c $(SRC)/genmag_SIMSED.c 
-	(cd $(OBJ); $(CC) $(SNCFLAGS) $(IGSL) $(SRC)/SIMSED_fudge.c )
+	(cd $(OBJ); $(CC) $(SNCFLAGS) $(ICFITSIO) $(IGSL) $(SRC)/SIMSED_fudge.c )
 
 $(BIN)/SIMSED_fudge.exe : \
 	$(OBJ)/SIMSED_fudge.o  $(OBJ)/sntools.o  $(OBJ)/sntools_genSmear.o \
@@ -1024,9 +1030,8 @@ $(BIN)/SIMSED_fudge.exe : \
 	$(OBJ)/sntools_genSmear.o \
 	$(OBJ)/MWgaldust.o \
 	$(LIB)/libsnana.a  \
-	-lm $(LGSL) $(LCERN)
+	-lm $(LCFITSIO) $(LGSL) $(LCERN)
 	(cd $(OBJ); rm SIMSED_fudge.o )
-
 
 # -------------
 # SIMSED_extractSpec
